--- a/piggyBank/templates/base.html
+++ b/piggyBank/templates/base.html
@@ -10,16 +10,19 @@
     />
     <style>
       body {
-        background-color: #f9ebb2; /* Light yellow background */
+        background-color: #c3dde5; /* Soft blue background */
       }
+
       .navbar {
-        background-color: #ff7e67; /* Reddish-orange navbar */
+        background-color: #ffb6c1; /* Soft pink navbar */
       }
+
       .navbar-brand {
-        color: white;
+        color: #6b5b95; /* Soft purple text */
       }
+
       .jumbotron {
-        background-color: #ffe156; /* Yellow jumbotron */
+        background-color: #d9a7c7; /* Soft lavender jumbotron */
       }
     </style>
   </head>
@@ -28,7 +31,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="/">Home</a>
-      <a class="navbar-brand" href="/piggybank">My Piggy Bank</a>
+      <a class="navbar-brand" href="/track_allowance">My Piggy Bank</a>
       <div class="ml-auto">
         <a class="btn btn-primary" href="/signin">Sign In</a>
       </div>
