--- a/piggyBank/templates/base.html
+++ b/piggyBank/templates/base.html
@@ -32,6 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="/">Home</a>
       <a class="navbar-brand" href="/track_allowance">My Piggy Bank</a>
+      <a class="navbar-brand" href="/goal_form">Add a Savings Goal</a>
       <div class="ml-auto">
         <a class="btn btn-primary" href="/signin">Sign In</a>
       </div>
