--- a/piggyBank/templates/home.html
+++ b/piggyBank/templates/home.html
@@ -2,7 +2,20 @@
 <div class="jumbotron text-center">
   <h1>Welcome to Piggy Bank!</h1>
   <p>Start saving money in your digital piggy bank. It's fun and easy!</p>
-  <p>To get started, create your own Piggy Bank account.</p>
+  <p>
+    To get started, create your own Piggy Bank account or click on the 'My Piggy
+    Bank' tab to use as a guest.
+  </p>
   <a class="btn btn-primary btn-lg" href="/signin">Get Started!</a>
+  <div class="image-container mt-3">
+    <img
+      alt="a pink pig standing on top of a blue ground with stars in the sky behind it"
+      class="hCL kVc L4E MIw"
+      fetchpriority="auto"
+      loading="auto"
+      src="https://i.pinimg.com/originals/d8/c3/af/d8c3afe7e1647fea2d8e9f95dfa820f5.gif"
+    />
+  </div>
 </div>
+
 {% endblock %}
