--- a/piggyBank/templates/add_Goals.html
+++ b/piggyBank/templates/add_Goals.html
@@ -5,10 +5,14 @@
 
   <div class="card mt-4">
     <div class="card-body">
-      <form method="post" action="{% url 'save_goal' %}">
+      <form
+        method="post"
+        action="{% url 'save_goal' %}"
+        enctype="multipart/form-data"
+      >
         {% csrf_token %}
         <div class="form-group">
-          <label for="itemName">Item Name:</label>
+          <label for="itemName">What do you want to save up for?:</label>
           <input
             type="text"
             class="form-control"
@@ -18,13 +22,24 @@
           />
         </div>
         <div class="form-group">
-          <label for="itemPrice">Price of the Item:</label>
+          <label for="itemPrice">How much does it cost?:</label>
           <input
             type="number"
             class="form-control"
             id="itemPrice"
             name="itemPrice"
+            step=".01"
             required
+          />
+        </div>
+        <div class="form-group">
+          <label for="itemImage">Add a picture here! (Optional):</label>
+          <input
+            type="file"
+            class="form-control-file"
+            id="itemImage"
+            name="itemImage"
+            accept="image/*"
           />
         </div>
         <button type="submit" class="btn btn-primary">Set Goal</button>
