--- a/piggyBank/templates/base.html
+++ b/piggyBank/templates/base.html
@@ -34,7 +34,11 @@
       <a class="navbar-brand" href="/track_allowance">My Piggy Bank</a>
       <a class="navbar-brand" href="/goal_form">Add a Savings Goal</a>
       <div class="ml-auto">
+        {% if username %}
+        <a class="btn btn-primary" href="/signout">Sign Out</a>
+        {% else %}
         <a class="btn btn-primary" href="/signin">Sign In</a>
+        {% endif %}
       </div>
     </nav>
 
@@ -42,8 +46,8 @@
     {% block content %} {% endblock %}
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
