--- a/piggyBank/templates/home.html
+++ b/piggyBank/templates/home.html
@@ -4,7 +4,7 @@
   <h2>Welcome, {{ username }}!</h2>
   {% comment %} Later, once age specific links are set up, send the user to the
   appropriate html pages {% endcomment %} {% else %}
-  <p>Welcome to Piggy Bank!</p>
+  <h2>Welcome to Piggy Bank!</h2>
   {% endif %}
   <p>Start saving money in your digital piggy bank. It's fun and easy!</p>
   <p>
